# deforestation

./: .gitignore  analyze_usable.py  convert_to_rgb.py  dataloader.py  download_data.py  evaluate.py  evaluate_model.py  export_tif.py  model.py  model_utils.py  predict.py  process.py  process_labels.py  pyproject.toml  show.py  submit.py  tif_utils.py  train.py  train_unet.py  validate.py
