[project]
name = "deforestation"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.91",
    "botocore>=1.42.91",
    "click>=8.3.2",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "rasterio>=1.5.0",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
]
